<resources>

    <string name="record_start">Start Recording</string>
    <string name="record_stop">Stop Recording</string>

    <string name="now">Just Now</string>
    <string name="history">History</string>
    <string name="transcription_pending">Transcription Pending</string>
    <string name="transcription_pending_no_network">Transcription Pending\nWe will retry once an internet connection is found.</string>
    <string name="transcription_failed">Transcription Failed</string>
    <string name="transcription_retry">Transcription Failed\nWe will retry after a short break.</string>
    <string name="transcription_retry_no_network">Transcription Failed\nWe will retry once an internet connection is found.</string>
    <string name="transcription_success">Transcription succeeded but no text was returned.</string>
    <string name="settings">Settings</string>
    <string name="always_listening">Always Listening</string>
    <string name="always_listening_message">Listens for voice commands even when this app is closed.</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="login_opening_message">WindowMirror’s Butterfly lets you create content in an instant!</string>
    <string name="login_button_label">Sign Up / Login</string>
    <string name="trademark1">Butterfly is a registered trademark of\nWindowMirror Inc. registered in USA</string>
    <string name="copyright">© 2018 WindowMirror Inc.</string>
    <string name="sign_out">Sign Out</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="entry_not_found">Entry not found</string>
    <string name="share_title">Share with...</string>
    <string name="about">About Butterfly</string>
    <string name="recordings_empty_message">No Recordings Found. Touch the butterfly to get started now.</string>
    <string name="authenticationUri"></string>
    <string name="primarySubscriptionKey">58b60b52d58b4a1ba5da81b91b825d7f</string>
    <string name="luisAppID"></string>
    <string name="luisSubscriptionID"></string>
</resources>
